# heirloom-ports

./: CALDERA.LICENSE  CMakeLists.txt  MIT.LICENSE  README.md  README.md~
CMake/: FindPAM.cmake  FindRPC.cmake
_TODO/: csplit.1
_man/: ar.1  banner.1  basename.1  bc.1  bdiff.1  bfs.1  cal.1  cat.1  chmod.1  chown.1  cksum.1  cmp.1  comm.1  cp.1  cpio.1  cut.1  date.1  dc.1  dd.1  deroff.1  df.1  diff.1  diff3.1  dircmp.1  dirname.1  du.1  echo.1  ed.1  egrep.1  env.1  expand.1  factor.1  false.1  fgrep.1  file.1  find.1  fmt.1  grep.1  groups.1  head.1  (+45 more)
ar/: CMakeLists.txt  append.c  ar.c  archive.c  contents.c  delete.c  extract.c  misc.c  move.c  print.c  replace.c
ar/include/: archive.h  extern.h  pathnames.h  strmode.h
banner/: CMakeLists.txt  banner.c
basename/: CMakeLists.txt  basename.c
bc/: CMakeLists.txt  bc.y
bdiff/: CMakeLists.txt  bdiff.c
bfs/: CMakeLists.txt  bfs.c
cal/: CMakeLists.txt  cal.c
cat/: CMakeLists.txt  cat.c
checknr/: CMakeLists.txt  checknr.c
chmod/: CMakeLists.txt  chmod.c
chown/: CMakeLists.txt  chown.c
cksum/: CMakeLists.txt  cksum.c
cmp/: CMakeLists.txt  cmp.c
col/: CMakeLists.txt  col.c
comm/: CMakeLists.txt  comm.c
cp/: CMakeLists.txt  cp.c  note
cpio/: CMakeLists.txt  cpio.c
csplit/: CMakeLists.txt  csplit.c
cut/: CMakeLists.txt  cut.c
date/: CMakeLists.txt  date.c
dc/: CMakeLists.txt  dc.c  dc.h  version.c
dd/: CMakeLists.txt  dd.c
deroff/: CMakeLists.txt  deroff.c
df/: CMakeLists.txt  df.c  statvfs.c
diff/: CMakeLists.txt  diff.c  diff.h  diffh.c
diff3/: CMakeLists.txt  diff3.sh  diff3prog.c
dircmp/: CMakeLists.txt  dircmp.sh
ex/: CMakeLists.txt
ex/include/: compat.h  config.h  ex.h  ex_argv.h  ex_proto.h  ex_re.h  ex_temp.h  ex_tty.h  ex_tune.h  ex_vars.h  ex_vis.h
ex/include/libterm/: libterm.h
ex/libterm/: termcap.c  tgoto.c  tputs.c
ex/src/: ex.c  ex_addr.c  ex_cmds.c  ex_cmds2.c  ex_cmdsub.c  ex_data.c  ex_extern.c  ex_get.c  ex_io.c  ex_put.c  ex_re.c  ex_set.c  ex_subr.c  ex_tagio.c  ex_temp.c  ex_tty.c  ex_unix.c  ex_v.c  ex_vadj.c  ex_version.c  ex_vget.c  ex_vmain.c  ex_voper.c  ex_vops.c  ex_vops2.c  ex_vops3.c  ex_vput.c  ex_vwind.c  expreserve.c  exrecover.c  malloc.c  mapmalloc.c  printf.c  wvi.sh
expand/: CMakeLists.txt  expand.c  tablist.c
extras/: CMakeLists.txt  dt.sh  mktgz.sh  rnr.sh  yy.sh
file/: CMakeLists.txt  file.c
grep/: CMakeLists.txt  egrep.c  egrep.h  egrep.y  fgrep.c  grep.c  illumosgrep.c
lex/: CMakeLists.txt  allprint.c  getopt.c  header.c  libmain.c  lsearch.c  main.c  ncform  reject.c  sub1.c  sub2.c  sub3.c  wcio.c  yyless.c  yywrap.c
lex/include/: ldefs.h  once.h  search.h  sgs.h
libcommon/: CHECK  CHECK.c  CMakeLists.txt  regexpr.c  sfile.c
libcommon/include/: regexp.h
libheirloom/: CHECK  CHECK.c  CMakeLists.txt  asciitype.c  compat.c  getdir.c  getopt.c  ib_alloc.c  ib_close.c  ib_free.c  ib_getlin.c  ib_getw.c  ib_open.c  ib_popen.c  ib_read.c  ib_seek.c  memalign.c  oblok.c  pathconf.c  pfmt.c  regexpr.c  setlabel.c  setuxlabel.c  sfile.c  sighold.c  sigignore.c  signal.c  sigpause.c  sigrelse.c  sigset.c  strtol.c  sysv3.c  utmpx.c  vpfmt.c  writerr.c
libheirloom/include/: _alloca.h  _malloc.h  _utmpx.h  asciitype.h  atoll.h  blank.h  getdir.h  iblok.h  memalign.h  msgselect.h  oblok.h  pathconf.h  pfmt.h  progname.h  regexp.h  regexpr.h  sfile.h  sigset.h  typecompat.h
libuxre/: CMakeLists.txt  _collelem.c  _collmult.c  bracket.c  onefile.c  regcomp.c  regdfa.c  regerror.c  regexec.c  regfree.c  regnfa.c  regparse.c  stubs.c
libuxre/include/: colldata.h  re.h  regdfa.h  regex.h  wcharm.h
libwchar/: CMakeLists.txt  mblen.c  mbrtowc.c  mbstowcs.c  mbtowc.c  wcslen.c  wcsncmp.c  wctfunc.c  wctomb.c  wctype.c  wcwidth.c
libwchar/include/: wchar.h  wctype.h
make/: CMakeLists.txt  buildnotes
make/include/avo/: avo_alloca.h  intl.h
make/include/bsd/: bsd.h
make/include/mk/: copyright.h  defs.h
make/include/mksdmsi18n/: mksdmsi18n.h
make/include/mksh/: defs.h  dosys.h  globals.h  i18n.h  libmksh_init.h  macro.h  misc.h  mksh.h  read.h
make/include/vroot/: args.h  report.h  vroot.h
make/makestate/: ld_file.c  lock.c
make/mksh/: dosys.cc  macro.cc  misc.cc  read.cc  wcslen.c
make/src/: .CMakeLists.txt.kate-swp  CMakeLists.txt  ar.cc  depvar.cc  doname.cc  dosys.cc  files.cc  globals.cc  implicit.cc  macro.cc  main.cc  misc.cc  nse_printdep.cc  read.cc  read2.cc  rep.cc  state.cc  version.c
make/vroot/: report.cc  vroot.cc
more/: CMakeLists.txt  more.c
sccs/: CMakeLists.txt  buildnotes
sccs/cassi/: cmrcheck.c  deltack.c  error.c  filehand.c  gf.c
sccs/comobj/: auxf.c  chkid.c  chksid.c  cmpdate.c  date_ab.c  date_ba.c  del_ab.c  del_ba.c  dodelt.c  dofile.c  dohist.c  doie.c  dolist.c  encode.c  eqsid.c  flushto.c  fmterr.c  getline.c  getser.c  logname.c  newsid.c  newstats.c  permiss.c  pf_ab.c  putline.c  rdmod.c  setup.c  sid_ab.c  sid_ba.c  sidtoser.c  sinit.c  stats_ab.c  strptim.c
sccs/include/: defines.h  fatal.h  filehand.h  had.h  i18n.h  macros.h
sccs/mpwlib/: abspath.c  any.c  cat.c  dname.c  fatal.c  fdfopen.c  fmalloc.c  had.c  imatch.c  index.c  lockit.c  patoi.c  repl.c  satoi.c  setsig.c  sname.c  strend.c  trnslat.c  userexit.c  xcreat.c  xlink.c  xmsg.c  xopen.c  xpipe.c  xunlink.c  zero.c
sccs/src/: admin.c  comb.c  delta.c  get.c  help.c  prs.c  prt.c  rmchg.c  sccs.c  unget.c  val.c  vc.c  version.c  what.c
sh/: CMakeLists.txt  args.c  blok.c  bltin.c  cmd.c  ctype.c  defs.c  echo.c  error.c  expand.c  fault.c  func.c  getopt.c  gmatch.c  hash.c  hashserv.c  io.c  jobs.c  macro.c  main.c  mapmalloc.c  msg.c  name.c  print.c  pwd.c  service.c  setbrk.c  stak.c  string.c  strsig.c  test.c  ulimit.c  umask.c  version.c  word.c  xec.c
sh/fakewchar/: wchar.h  wctype.h
sh/include/: brkincr.h  ctype.h  defs.h  dup.h  hash.h  mac.h  mbtowi.h  mode.h  name.h  stak.h  sym.h  timeout.h
su/: CMakeLists.txt  config.h  su.c
touch/: CMakeLists.txt  touch.c
true/: CMakeLists.txt
yacc/: CMakeLists.txt  libmai.c  libzer.c  sgs.h  y1.c  y2.c  y3.c  y4.c  y5.c  yaccpar
(+364 files in other folders)
