cmake_minimum_required(VERSION 3.1)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)

project(heirloom-ports)

option(TAR_ENABLE_ZLIB "Enable support for the ZLib compression library in tar" ON)
option(TAR_ENABLE_BZ2 "Enable support for the Bzip2 compression library in tar" ON)
option(SHADOW_PASSWORDS "Use shadow for passwords" ON)

find_package(RPC REQUIRED)
find_package(BISON REQUIRED)
if(TAR_ENABLE_ZLIB) 
    find_package(ZLIB REQUIRED)
endif()
if(TAR_ENABLE_BZ2)
    find_package(BZip2 REQUIRED)
endif()

# build libraries first so we can link the executables against them
add_subdirectory(libuxre)
add_subdirectory(libcommon)
add_subdirectory(libwchar)

# build devtools
add_subdirectory(lex)
add_subdirectory(m4)
add_subdirectory(make)
add_subdirectory(yacc)
add_subdirectory(sccs)

# build coreutils equivalents
add_subdirectory(cal)
add_subdirectory(cat)
add_subdirectory(chmod)
add_subdirectory(chown)
add_subdirectory(cksum)
add_subdirectory(cp)
add_subdirectory(dd)
#add_subdirectory(diff)
add_subdirectory(diff3)
add_subdirectory(du)
add_subdirectory(echo)
add_subdirectory(ed)
add_subdirectory(grep)
add_subdirectory(kill)
add_subdirectory(mkdir)
add_subdirectory(nice)
add_subdirectory(ps)
add_subdirectory(pwd)
add_subdirectory(rm)
add_subdirectory(sed)
add_subdirectory(sh)
add_subdirectory(sleep)
add_subdirectory(su)
add_subdirectory(tar)
add_subdirectory(tee)
add_subdirectory(what)