cmake_minimum_required(VERSION 3.1)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)

project(heirloom-ports)

option(ENABLE_ZLIB "Enable support for the ZLib compression library in tar" ON)
option(ENABLE_BZ2 "Enable support for the Bzip2 compression library in tar" ON)
option(SHADOW_PASSWORDS "Use shadow for passwords (not PAM)" OFF)
option(ENABLE_HNAMES "Install binaries with an h- prefix so they can be installed alongside usual Unix/GNU equivalents" ON)
option(ENABLE_ILLUMOS "Build certain tools from illumos which have improved functionality but may be larger and less conformant to the classic Unix style" OFF)
option(ENABLE_EXTRAS "Build extra shell scripts that simplify usage" OFF)
option(ENABLE_PAM "Enable Pluggable Authentication Module support (usually yes)" ON)
set(USRSHAREDIR "${CMAKE_INSTALL_PREFIX}/usr/share" CACHE STRING "Where files intended for /usr/share should be put")
set(ETCDIR "${CMAKE_INSTALL_PREFIX}/etc" CACHE STRING "Where files intended for /etc should be put (mostly global configuration files)")

find_package(RPC REQUIRED)
if(TAR_ENABLE_ZLIB) 
    find_package(ZLIB REQUIRED)
endif()
if(TAR_ENABLE_BZ2)
    find_package(BZip2 REQUIRED)
endif()

# temporary paths so host system doesn't get screwed up
set(USRSHAREDIR /home/lyndsay/code/heirloom-ports/_INST/pub)
set(ETCDIR /home/lyndsay/code/heirloom-ports/_INST/cfg)
set(CMAKE_INSTALL_BINDIR /home/lyndsay/code/heirloom-ports/_INST/bin)
set(CMAKE_INSTALL_INCLUDEDIR /home/lyndsay/code/heirloom-ports/_INST/inc)
set(CMAKE_INSTALL_LIBDIR /home/lyndsay/code/heirloom-ports/_INST/lib)

#set(CMAKE_INSTALL_BINDIR /bin)
#set(CMAKE_INSTALL_INCLUDEDIR /usr/include)
#set(CMAKE_INSTALL_LIBDIR /lib)
#set(ETCDIR /etc)
#set(USRSHAREDIR /usr/share)

# build libraries first so we can link the executables against them
#add_subdirectory(libavl)
add_subdirectory(libuxre)
add_subdirectory(libheirloom)
add_subdirectory(libwchar)

# build devtools
add_subdirectory(ar)
#add_subdirectory(ld)
add_subdirectory(lex)
add_subdirectory(m4)
add_subdirectory(make)
add_subdirectory(yacc)
#add_subdirectory(lint) # lint depends on heirloom yacc so we have to build it after
add_subdirectory(sccs)

# build toolchest
add_subdirectory(banner)
add_subdirectory(basename)
add_subdirectory(bc)
add_subdirectory(bdiff)
add_subdirectory(cal)
add_subdirectory(cat)
add_subdirectory(chmod)
add_subdirectory(chown)
add_subdirectory(cksum)
add_subdirectory(cp)
add_subdirectory(cpio)
add_subdirectory(cut)
add_subdirectory(date)
add_subdirectory(dc)
add_subdirectory(dd)
#add_subdirectory(diff)
add_subdirectory(diff3)
add_subdirectory(du)
add_subdirectory(echo)
add_subdirectory(ed)
add_subdirectory(env)
add_subdirectory(ex)
add_subdirectory(file)
add_subdirectory(find)
add_subdirectory(grep)
add_subdirectory(groups)
add_subdirectory(id)
add_subdirectory(kill)
add_subdirectory(mkdir)
add_subdirectory(more)
add_subdirectory(nice)
add_subdirectory(od)
add_subdirectory(printf)
add_subdirectory(ps)
add_subdirectory(pwd)
add_subdirectory(rm)
add_subdirectory(sed)
add_subdirectory(sh)
add_subdirectory(sleep)
add_subdirectory(stty)
add_subdirectory(su)
add_subdirectory(tar)
add_subdirectory(tee)
add_subdirectory(test)
add_subdirectory(touch)
add_subdirectory(true)
add_subdirectory(tty)
add_subdirectory(uname)
add_subdirectory(what)
add_subdirectory(who)
add_subdirectory(yes)

if(ENABLE_EXTRAS)
    add_subdirectory(extras)
endif()