add_executable(bdiff bdiff.c)
if(ENABLE_HNAMES)
    set_target_properties(bdiff PROPERTIES PREFIX h)
    target_compile_definitions(bdiff PUBLIC -DDIFF="${CMAKE_INSTALL_BINDIR}/hdiff")
else()
    target_compile_definitions(bdiff PUBLIC -DDIFF="${CMAKE_INSTALL_BINDIR}/diff")
endif()
target_link_libraries(bdiff heirloom)
install(TARGETS bdiff)