configure_file(dircmp.sh dircmp @ONLY)

if(ENABLE_HNAMES)
    install(
        FILES ${CMAKE_BINARY_DIR}/dircmp/dircmp RENAME hdircmp
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        DESTINATION ${CMAKE_INSTALL_BINDIR}/
    )
else()
    install(
        FILES ${CMAKE_BINARY_DIR}/dircmp/dircmp
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        DESTINATION ${CMAKE_INSTALL_BINDIR}/
    )
endif()