add_executable(su su.c)
if(SHADOW_PASSWORDS)
    target_compile_definitions(su PRIVATE SHADOW_PWD)
endif()
if(ENABLE_PAM)
    find_package(PAM REQUIRED)
    target_compile_definitions(su PRIVATE PAM)
    target_link_libraries(su ${PAM_LIBRARIES} crypt)
else()
    target_link_libraries(su crypt)
endif()

if(ENABLE_HNAMES)
    set_target_properties(su PROPERTIES PREFIX "h")
endif()
install(TARGETS su)